--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="row">
       <div class="col upload-btn">
-        <a href="upload.html" class="btn btn-primary mt-3 mb-3">Upload New Image</a>
+        <a href="https://xrdzrnhhttqy4ow2daho7roybu0icyti.lambda-url.us-east-1.on.aws" class="btn btn-primary mt-3 mb-3">Upload New Image</a>
       </div>
     </div>
     <div id="image-gallery" class="row justify-content-center">
