--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <div class="row">
       <div class="col title">
         <h1 class="mt-5">AI Image Gallery</h1>
+        <p class="mt-5">(Descriptions by Amazon Bedrock)</p>
       </div>
     </div>
     <div class="row">
